--- a/index.html
+++ b/index.html
@@ -656,8 +656,8 @@
                         <img src="images/socialfeed.png" alt="Project 3 Screenshot">
                     </div>
                     <div class="project-content">
-                        <h3>Responsive Landing Page</h3>
-                        <p>A modern, responsive landing page built with HTML and CSS, featuring smooth animations.</p>
+                        <h3>Social Feed</h3>
+                        <p>A lightweight social feed built with React, Recharts, and Tailwind CSS. Users can post, browse updates, and view simple activity stats in a clean, fast interface.</p>
                         <div class="project-links">
                             <a href="https://social-feed-project-mu.vercel.app/" target="_blank">View Project</a>
                         </div>
@@ -807,4 +807,5 @@
         });
     </script>
 </body>
+
 </html>
