--- a/index.html
+++ b/index.html
@@ -709,7 +709,7 @@
     <!-- Footer -->
     <footer>
         <div class="container">
-            <p>&copy; 2025 Keven Atef. All rights reserved. Built with React, Node.js and lots of creativity ✨</p>
+            <p>&copy; 2025 Keven Atef. All rights reserved. Made with Love and lots of creativity ✨</p>
         </div>
     </footer>
 
@@ -809,3 +809,4 @@
 </body>
 
 </html>
+
